--- a/SurfSpringSchoolProject/Info.plist
+++ b/SurfSpringSchoolProject/Info.plist
@@ -41,5 +41,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>LSApplicationCategoryType</key>
+	<string>NSCameraUsageDescription</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Фото</string>
 </dict>
 </plist>
